--- a/package.json
+++ b/package.json
@@ -1,48 +1,59 @@
 {
   "name": "aurelia-highcharts",
+  "description": "An example application integrating HighCharts with Aurelia CLI",
   "version": "1.0.0",
-  "description": "An example application integrating HighCharts with Aurelia",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/philiphendry/aurelia-highcharts.git"
+    "type": "???",
+    "url": "???"
   },
   "keywords": [
     "aurelia",
     "highcharts"
   ],
-  "author": "Philip Hendry",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/philiphendry/aurelia-highcharts/issues"
+  "dependencies": {
+    "aurelia-animator-css": "^1.0.1",
+    "aurelia-bootstrapper": "^2.1.0",
+    "bluebird": "^3.4.1",
+    "bootstrap": "^3.3.7",
+    "highcharts": "^5.0.12",
+    "jquery": "^3.2.1",
+    "requirejs": "^2.3.2",
+    "text": "github:requirejs/text#latest"
   },
-  "homepage": "https://github.com/philiphendry/aurelia-highcharts#readme",
+  "peerDependencies": {},
   "devDependencies": {
-    "jspm": "^0.16.2"
-  },
-  "jspm": {
-    "directories": {},
-    "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.17.0",
-      "aurelia-framework": "github:aurelia/framework@^0.16.0",
-      "aurelia-task-queue": "github:aurelia/task-queue@^0.7.0",
-      "bootstrap": "github:twbs/bootstrap@^3.3.5",
-      "css": "github:systemjs/plugin-css@^0.1.16",
-      "highcharts": "npm:highcharts-release@^4.1.9",
-      "jquery": "github:components/jquery@^2.1.4"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.22",
-      "babel-runtime": "npm:babel-runtime@^5.8.20",
-      "core-js": "npm:core-js@^1.1.0"
-    },
-    "overrides": {
-      "npm:highcharts-release@4.1.9": {
-        "main": "highcharts"
-      }
-    }
+    "aurelia-cli": "^0.27.0",
+    "aurelia-testing": "^1.0.0-beta.2.0.1",
+    "aurelia-tools": "^1.0.0",
+    "browser-sync": "^2.13.0",
+    "connect-history-api-fallback": "^1.2.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-changed-in-place": "^2.0.3",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-notify": "^2.2.0",
+    "minimatch": "^3.0.2",
+    "through2": "^2.0.1",
+    "uglify-js": "^2.6.3",
+    "vinyl-fs": "^2.4.3",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-register": "^6.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-babel-preprocessor": "^6.0.1"
   }
 }
